fix(web): table, fix sort icon hover color for dark mode

--- a/style/web/components/table/_index.less
+++ b/style/web/components/table/_index.less
@@ -587,7 +587,7 @@
   &.@{prefix}-is-focus,
   &:hover {
     color: @table-icon-active-color;
-    background-color: @table-icon-active-bg-color;
+    background-color: @table-highlight-bg-color--hover;
     border-radius: 50%;
   }
 }
